--- a/WebAppSecond/Views/Tilaukset/Index.cshtml
+++ b/WebAppSecond/Views/Tilaukset/Index.cshtml
@@ -8,7 +8,7 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Luo uusi", "Create")
+    @Html.ActionLink("Luo uusi tilaus", "Create")
 </p>
 <table class="table">
     <tr>
