--- a/WebAppSecond/Views/Tuotteet/Details.cshtml
+++ b/WebAppSecond/Views/Tuotteet/Details.cshtml
@@ -27,11 +27,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Kuva)
+            @Html.DisplayNameFor(model => model.Image)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Kuva)
+            @Html.DisplayFor(model => model.Image)
         </dd>
 
     </dl>
