--- a/WebAppSecond/Views/Home/Index.cshtml
+++ b/WebAppSecond/Views/Home/Index.cshtml
@@ -36,16 +36,17 @@
         <p>
             Tässä tietoa yrityksestä!
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Tutustu paremmin &raquo;</a></p>
+        <p><a class="btn btn-default" href="/Home/About">Tutustu paremmin &raquo;</a></p>
     </div>
     <div class="col-md-4">
         <h2>Yhteystiedot</h2>
         <p>Tässä yhteystietomme!</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Tsekkaa täältä &raquo;</a></p>
+        <p><a class="btn btn-default" href="/Home/Contact">Tsekkaa täältä &raquo;</a></p>
     </div>
     <div class="col-md-4">
         <h2>Tuotteet</h2>
         <p>Täältä löydät tuotteemme!</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Klikkaa tästä &raquo;</a></p>
+        <p><a class="btn btn-info" @Html.ActionLink("Tsekkaa täältä»", "Index", "Tuotteet")</a></p>
+
     </div>
 </div>
