--- a/WebAppSecond/Views/Home/Index.cshtml
+++ b/WebAppSecond/Views/Home/Index.cshtml
@@ -1,34 +1,47 @@
-﻿@{
+﻿<hr />
+@{
     ViewBag.Title = "Home Page";
 }
 
 <div class="jumbotron">
     <h1>TILAUSSOVELLUS</h1>
     <p class="lead">Tässä palautettava tehtävä.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Kirjaudu &raquo;</a></p>
+    @*<p><a href="https://asp.net" class="btn btn-primary btn-lg">Kirjaudu &raquo;</a></p>*@
+    <p><a class="btn btn-dark" @Html.ActionLink("Kirjaudu»", "Login", "Home")</a></p>
 </div>
 
-@*<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
+<hr />
+
+<!--<div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">-->
+        @*<div class="carousel-item active">
+            <img style="height: 200px; display:block;" src="http://sharewell.fi/Bootcamp/images/silta.jpg" alt="http://sharewell.fi/Bootcamp/images/silta.jpg">
+        </div>
         <div class="carousel-item active">
-            <img style="height: 200px; width:100%; display:block;" src="@prod.ImageLink" alt="@prod.ImageLink">
+            <img style="height: 200px; display:block;" src="http://sharewell.fi/Bootcamp/images/porvoo.jpg" alt="http://sharewell.fi/Bootcamp/images/porvoo.jpg">
+        </div>*@
+        <!--<div class="carousel-item active">
+            <img src="http://sharewell.fi/Bootcamp/images/silta.jpg" class="d-block w-100" alt="Pomelo">
         </div>
-        <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
+        <div class="carousel-item active">
+            <img src="http://sharewell.fi/Bootcamp/images/porvoo.jpg" class="d-block w-100" alt="Potaattis">
         </div>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-    </a>
-</div>*@
+</div>-->
+
+
+<div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+        <div class="carousel-item">
+            <img src="http://sharewell.fi/Bootcamp/images/silta.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="http://sharewell.fi/Bootcamp/images/porvoo.jpg" class="d-block w-100" alt="...">
+        </div>
+    </div>
+</div>
+
+<hr />
 
 <div class="row">
     <div class="col-md-4">
@@ -36,17 +49,18 @@
         <p>
             Tässä tietoa yrityksestä!
         </p>
-        <p><a class="btn btn-default" href="/Home/About">Tutustu paremmin &raquo;</a></p>
+        @*<p><a class="btn btn-default" href="/Home/About">Tutustu paremmin &raquo;</a></p>*@
+        <p><a class="btn btn-info" @Html.ActionLink("Tutustu tästä »", "About", "Home")</a></p>
     </div>
     <div class="col-md-4">
         <h2>Yhteystiedot</h2>
         <p>Tässä yhteystietomme!</p>
-        <p><a class="btn btn-default" href="/Home/Contact">Tsekkaa täältä &raquo;</a></p>
+        @*<p><a class="btn btn-default" href="/Home/Contact">Tsekkaa täältä &raquo;</a></p>*@
+        <p><a class="btn btn-info" @Html.ActionLink("Tsekkaa täältä »", "Contact", "Home")</a></p>
     </div>
     <div class="col-md-4">
         <h2>Tuotteet</h2>
         <p>Täältä löydät tuotteemme!</p>
-        <p><a class="btn btn-info" @Html.ActionLink("Tsekkaa täältä»", "Index", "Tuotteet")</a></p>
-
+        <p><a class="btn btn-info" @Html.ActionLink("Klikkaa tästä »", "Index", "Tuotteet")</a></p>
     </div>
 </div>
