--- a/WebAppSecond/Views/Tilaukset/Index.cshtml
+++ b/WebAppSecond/Views/Tilaukset/Index.cshtml
@@ -5,10 +5,10 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Etusivu</h2>
 
 <p>
-    @Html.ActionLink("Luo uusi tilaus", "Create")
+    @Html.ActionLink("Luo uusi tuote", "Create")
 </p>
 <table class="table">
     <tr>
@@ -49,9 +49,9 @@
                 @Html.DisplayFor(modelItem => item.Postitoimipaikat.Postitoimipaikka)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.TilausID }) |
-                @Html.ActionLink("Details", "Details", new { id = item.TilausID }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.TilausID })
+                @Html.ActionLink("Muokkaa", "Edit", new { id = item.TilausID }) |
+                @Html.ActionLink("Tiedot", "Details", new { id = item.TilausID }) |
+                @Html.ActionLink("Poista", "Delete", new { id = item.TilausID })
             </td>
         </tr>
     }
