--- a/WebAppSecond/Views/Tilaukset/Delete.cshtml
+++ b/WebAppSecond/Views/Tilaukset/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Poista tuote</h2>
 
-<h3>Tahdotko varmasti poistaa tuotteen?</h3>
+<h3>Tahdotko varmasti poistaa tilauksen?</h3>
 <div>
     <h4>Tilaukset</h4>
     <hr />
