--- a/WebAppSecond/Views/Tuotteet/Delete.cshtml
+++ b/WebAppSecond/Views/Tuotteet/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Poista</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Oletko varma, että haluat poistaa tuotteen?</h3>
 <div>
     <h4>Tuotteet</h4>
     <hr />
@@ -41,8 +41,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Poista" class="btn btn-default" /> |
+            @Html.ActionLink("Takaisin tuotelistaukseen", "Index")
         </div>
     }
 </div>
