--- a/WebAppSecond/Views/Tuotteet/Details.cshtml
+++ b/WebAppSecond/Views/Tuotteet/Details.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Tietoa</h2>
 
 <div>
     <h4>Tuotteet</h4>
@@ -37,6 +37,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.TuoteID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Muokkaa", "Edit", new { id = Model.TuoteID }) |
+    @Html.ActionLink("Takaisin tuotelistaukseen", "Index")
 </p>
