--- a/WebAppSecond/Views/Tilaukset/Delete.cshtml
+++ b/WebAppSecond/Views/Tilaukset/Delete.cshtml
@@ -1,5 +1,7 @@
 ﻿@model WebAppSecond.Models.Tilaukset
 
+<hr />
+
 @{
     ViewBag.Title = "Delete";
 }
@@ -53,7 +55,8 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
