--- a/WebAppSecond/Views/Home/Index.cshtml
+++ b/WebAppSecond/Views/Home/Index.cshtml
@@ -7,40 +7,34 @@
     <h1>TILAUSSOVELLUS</h1>
     <p class="lead">Tässä palautettava tehtävä.</p>
     @*<p><a href="https://asp.net" class="btn btn-primary btn-lg">Kirjaudu &raquo;</a></p>*@
-    <p><a class="btn btn-dark" @Html.ActionLink("Kirjaudu»", "Login", "Home")</a></p>
+    @*<p><a class="btn btn-dark" @Html.ActionLink("Kirjaudu»", "Login", "Home")</a></p>*@
+    <p>@Html.ActionLink("Kirjaudu»", "Login", "Home", new { @class = "btn btn-dark" })</p>
 </div>
 
 <hr />
-
-<!--<div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">-->
-        @*<div class="carousel-item active">
-            <img style="height: 200px; display:block;" src="http://sharewell.fi/Bootcamp/images/silta.jpg" alt="http://sharewell.fi/Bootcamp/images/silta.jpg">
-        </div>
-        <div class="carousel-item active">
-            <img style="height: 200px; display:block;" src="http://sharewell.fi/Bootcamp/images/porvoo.jpg" alt="http://sharewell.fi/Bootcamp/images/porvoo.jpg">
-        </div>*@
-        <!--<div class="carousel-item active">
-            <img src="http://sharewell.fi/Bootcamp/images/silta.jpg" class="d-block w-100" alt="Pomelo">
-        </div>
-        <div class="carousel-item active">
-            <img src="http://sharewell.fi/Bootcamp/images/porvoo.jpg" class="d-block w-100" alt="Potaattis">
-        </div>
-    </div>
-</div>-->
-
-
-<div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+@*Kumpikaan karuselleista ei toimi.
+    
+<div id="carouselTesti1" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
-        <div class="carousel-item">
-            <img src="http://sharewell.fi/Bootcamp/images/silta.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-item active">
+            <img style="height: 300px; display:block;" src="http://sharewell.fi/Bootcamp/images/silta.jpg" alt="Pomelo">
         </div>
         <div class="carousel-item">
-            <img src="http://sharewell.fi/Bootcamp/images/porvoo.jpg" class="d-block w-100" alt="...">
+            <img style="height: 300px; display:block;" src="http://sharewell.fi/Bootcamp/images/porvoo.jpg" alt="Potaattis">
         </div>
     </div>
-</div>
+</div>*@
 
+@*<div id="carouselTesti2" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="http://sharewell.fi/Bootcamp/images/silta.jpg" class="d-block w-100" alt="Pomelo">
+            </div>
+            <div class="carousel-item">
+                <img src="http://sharewell.fi/Bootcamp/images/porvoo.jpg" class="d-block w-100" alt="Potaattis">
+            </div>
+        </div>
+    </div>*@
 <hr />
 
 <div class="row">
@@ -49,18 +43,25 @@
         <p>
             Tässä tietoa yrityksestä!
         </p>
-        @*<p><a class="btn btn-default" href="/Home/About">Tutustu paremmin &raquo;</a></p>*@
-        <p><a class="btn btn-info" @Html.ActionLink("Tutustu tästä »", "About", "Home")</a></p>
+        @*<p><a class="btn btn-info" @Html.ActionLink("Tutustu tästä »", "About", "Home")</a></p>*@
+        <p>@Html.ActionLink("Tutustu tästä »", "About", "Home", new { @class = "btn btn-info" })</p>
     </div>
     <div class="col-md-4">
         <h2>Yhteystiedot</h2>
         <p>Tässä yhteystietomme!</p>
-        @*<p><a class="btn btn-default" href="/Home/Contact">Tsekkaa täältä &raquo;</a></p>*@
-        <p><a class="btn btn-info" @Html.ActionLink("Tsekkaa täältä »", "Contact", "Home")</a></p>
+        @*<p><a class="btn btn-info" @Html.ActionLink("Tsekkaa täältä »", "Contact", "Home")</a></p>*@
+        <p>@Html.ActionLink("Tsekkaa täältä »", "Contact", "Home", new { @class = "btn btn-info" })</p>
+
     </div>
     <div class="col-md-4">
         <h2>Tuotteet</h2>
         <p>Täältä löydät tuotteemme!</p>
-        <p><a class="btn btn-info" @Html.ActionLink("Klikkaa tästä »", "Index", "Tuotteet")</a></p>
+        @*<p><a class="btn btn-info" @Html.ActionLink("Klikkaa tästä »", "Index", "Tuotteet")</a></p>*@
+        <p>@Html.ActionLink("Klikkaa tästä »", "Index", "Tuotteet", new { @class = "btn btn-info" })</p>
+
     </div>
 </div>
+
+@* Ohjeita stackowerflowsta ku yritin saada karusellin toimimaan. Ei jeesaa.
+@Scripts.Render("~/bundles/jquery")
+@Scripts.Render("~/bundles/bootstrap.css")*@
