--- a/WebAppSecond/Views/Home/Index.cshtml
+++ b/WebAppSecond/Views/Home/Index.cshtml
@@ -12,9 +12,9 @@
 </div>
 
 <hr />
-@*Kumpikaan karuselleista ei toimi.
+@*Kumpikaan karuselleista ei toimi.*@
     
-<div id="carouselTesti1" class="carousel slide" data-bs-ride="carousel">
+@*<div id="carouselTesti1" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
         <div class="carousel-item active">
             <img style="height: 300px; display:block;" src="http://sharewell.fi/Bootcamp/images/silta.jpg" alt="Pomelo">
@@ -62,6 +62,6 @@
     </div>
 </div>
 
-@* Ohjeita stackowerflowsta ku yritin saada karusellin toimimaan. Ei jeesaa.
-@Scripts.Render("~/bundles/jquery")
-@Scripts.Render("~/bundles/bootstrap.css")*@
+ @*Ohjeita stackowerflowsta ku yritin saada karusellin toimimaan. Ei jeesaa.*@
+@*@Scripts.Render("~/bundles/jquery")
+@Scripts.Render("~/bundles/bootstrap")*@
