--- a/WebAppSecond/Views/Tilaukset/Index.cshtml
+++ b/WebAppSecond/Views/Tilaukset/Index.cshtml
@@ -9,7 +9,7 @@
 <h2>Tilaukset</h2>
 
 <p>
-    @Html.ActionLink("Luo uusi tuote", "Create")
+    @Html.ActionLink("Luo uusi tilaus", "Create")
 </p>
 <table class="table">
     <tr>
